--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='/javascripts/things.js')
+    script(src='http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js')
   body
     block content
+    script(src='/javascripts/main.js')
